--- a/src/components/sections/TechSlider.astro
+++ b/src/components/sections/TechSlider.astro
@@ -1,5 +1,5 @@
 ---
-import { TechSlider as TechSliderAnimated } from '../react/TechSliderAnimated';
+import { TechSlider as TechSliderHierarchical } from '../react/TechSliderHierarchical';
 ---
 
-<TechSliderAnimated client:load />
+<TechSliderHierarchical client:load />
