--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/globals.css";
+import '../styles/globals.css';
 
 export interface Props {
   title?: string;
@@ -21,8 +21,8 @@ const { title = "Endev · Portfolio" } = Astro.props;
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
-    <meta name="theme-color" content="#8b5cf6" />
-    <meta name="msapplication-TileColor" content="#8b5cf6" />
+    <meta name="theme-color" content="#BC52EE" />
+    <meta name="msapplication-TileColor" content="#BC52EE" />
     <title>{title}</title>
 
     <!-- Fonts -->
