--- a/src/components/sections/TechSlider.astro
+++ b/src/components/sections/TechSlider.astro
@@ -1,5 +1,5 @@
 ---
-import { TechSlider as TechSliderHierarchical } from '../react/TechSliderHierarchical';
+import { TechSlider as TechSliderComponent } from '../react/TechSlider';
 ---
 
-<TechSliderHierarchical client:load />
+<TechSliderComponent client:load />
