--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -16,14 +16,14 @@ const projects = [
     description: "Desarrollo de aplicación interna para Freepik en mi periodo de prácticas como Frontend Engineer",
     image: "/2.png",
     technologies: ["React", "TypeScript", "NextJS", "Tailwind"],
-    liveUrl: "https://www.freepik.es/",
+    websiteUrl: "https://www.freepik.es/",
   },
   {
     title: "Pixela Figma Design",
     description: "Diseño completo del proyecto Pixela en Figma, incluyendo prototipos interactivos y sistema de diseño",
     image: "/3.png",
     technologies: ["Figma", "UI/UX"],
-    liveUrl: "https://www.figma.com/design/CPQe3LpPHQXKW1AWTYJhOG/PROYECTO-PIXELA.IO?node-id=0-1&p=f&t=xpIvV40gZcN5Tr4q-0"
+    websiteUrl: "https://www.figma.com/design/CPQe3LpPHQXKW1AWTYJhOG/PROYECTO-PIXELA.IO?node-id=0-1&p=f&t=xpIvV40gZcN5Tr4q-0"
   },
 ];
 ---
