--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/sections/Header.astro';
 import Hero from '../components/sections/Hero.astro';
+import TechStack from '../components/sections/TechStack.astro';
 import About from '../components/sections/About.astro';
 import Projects from '../components/sections/Projects.astro';
 import Footer from '../components/sections/Footer.astro';
@@ -17,6 +18,7 @@ import Footer from '../components/sections/Footer.astro';
       <div class="relative z-10">
         <Header />
         <Hero />
+        <TechStack />
         <About />
         <Projects />
         <Footer />
