feat: Mejorar descripciones en Hero y Projects para mayor claridad y atractivo

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -15,7 +15,7 @@ import { HeroArrow } from '../react/HeroArrow';
     <div class="absolute bottom-1/3 right-1/3 w-40 h-40 sm:w-52 sm:h-52 md:w-64 md:h-64 lg:w-80 lg:h-80 bg-indigo-600/50 rounded-full mix-blend-multiply filter blur-3xl animate-blob animation-delay-6000"></div>
   </div>
 
-  <div class="max-w-7xl mx-auto w-full relative z-10 flex flex-col items-center justify-center h-full">
+  <div class="max-w-7xl mx-auto w-full relative z-10 flex flex-col items-center justify-center h-full pt-20 sm:pt-24 md:pt-20 lg:pt-16">
     <!-- Centered content -->
     <div class="flex flex-col items-center justify-center text-center flex-1">
       <HeroContent client:load />
