--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -35,7 +35,7 @@ const projects = [
       <ProjectsTitle 
         client:visible 
         title="Mis Proyectos" 
-        description="Una selección de proyectos que demuestran mis habilidades en desarrollo frontend, desde aplicaciones web completas hasta componentes interactivos."
+        description="Aquí tienes una selección de proyectos que demuestran mis habilidades en desarrollo frontend, mostrando mi capacidad para construir aplicaciones web completas y funcionales."
       />
     </div>
 
